--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div id="navbar">
-    <a class="btn" href="/Login" >Login</a>
-    <a class="btn" href="/signup">Signup</a>
+    <a class="btn" href="/" >Profile</a>
+    <a class="btn" href="/userinfo">User Info</a>
 </div>
 
 <div>
