--- a/src/main/resources/templates/html/Userinfo.html
+++ b/src/main/resources/templates/html/Userinfo.html
@@ -11,7 +11,7 @@
     <a class="btn" href="/" >Profile</a>
     <a class="btn" href="/userinfo">User Info</a>
 </div>
-<div>
+<div id="result">
 
 </div>
 </body>
