--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -4,9 +4,11 @@
 
 body{
    background-image: url("../images/000000000000001kanki.png");
-
-    padding: 0;
-    color: white;
+    width: 1500px;
+    height: 700px;
+    border: 2px solid darkgoldenrod;
+    color: brown;
+    overscroll-behavior-x: contain;
     background-repeat: no-repeat;
 }
 
@@ -29,4 +31,22 @@ body{
 .btn:hover{
     background-color: #ba0072;
     color: #000c1d;
+}
+#result{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    overflow: hidden;
+    width: 100%;
+    padding:5%;
+
+}
+
+.area{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: fit-content;
+    border: 2px solid #000201;
+    margin: 2%;
 }
