--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -3,7 +3,7 @@
 
 
 body{
-   background-image: url("../images/000000000000001kanki.png");
+   background-image: url("../images/y.jpg");
     width: 1500px;
     height: 700px;
     border: 2px solid darkgoldenrod;
