--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,10 +10,13 @@
 <div id="navbar">
     <a class="btn" href="https://userdetailsbybal.herokuapp.com/" >Profile</a>
     <a class="btn" href="https://userdetailsbybal.herokuapp.com/userinfo">User Info</a>
-</div>
+<!--    <a class="btn" href="/" >Profile</a>-->
+<!--    <a class="btn" href="/userinfo">User Info</a>-->
+    </div>
 
 <div>
     <form id="my_form" action="https://userdetailsbybal.herokuapp.com/userinfo" onsubmit="adddata()" method="get">
+<!--    <form id="my_form" action="/userinfo" onsubmit="adddata()" method="get">-->
         Name
         <input type="text" id="name">
         Age
