--- a/src/main/resources/templates/html/Userinfo.html
+++ b/src/main/resources/templates/html/Userinfo.html
@@ -34,8 +34,8 @@
 </div>
 
 <div id="navbar">
-    <a class="btn" href="https://userdetailsbybal.herokuapp.com/" >Profile</a>
-    <a class="btn" href="https://userdetailsbybal.herokuapp.com/userinfo">User Info</a>
+    <a class="btn" href="https://endtermbackend.herokuapp.com/" >Profile</a>
+    <a class="btn" href="https://endtermbackend.herokuapp.com/userinfo">User Info</a>
 
 <!--    <a class="btn" href="/" >Profile</a>-->
 <!--   <a class="btn" href="/userinfo">User Info</a>-->
