--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <!--    <a class="btn" href="/userinfo">User Info</a>-->
     </div>
 
-<div>
+<div id="sam">
     <form id="my_form" action="https://endtermbackend.herokuapp.com/userinfo" onsubmit="adddata()" method="get">
 <!--    <form id="my_form" action="/userinfo" onsubmit="adddata()" method="get">-->
         Name
