--- a/src/main/resources/static/CSS/index.css
+++ b/src/main/resources/static/CSS/index.css
@@ -7,19 +7,19 @@ body{
     width: 1500px;
     height: 700px;
     border: 2px solid darkgoldenrod;
-    color: brown;
+    color: white;
     overscroll-behavior-x: contain;
     background-repeat: no-repeat;
 }
 
 #navbar{
-    background-color: #000201;
+    background-color: fuchsia;
     color: #d0d7ea;
     height:100px;
     width: 100%;
     display: flex;
     justify-content: center;
-    font-family: 'Lobster', cursive;
+    font-family: Helvetica;
 
 }
 .btn{
@@ -84,6 +84,12 @@ body{
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+}
+#sam{
+    justify-content: center;
+    padding-top: 335px;
+    padding-left: 335px;
+    padding-bottom: 35px;
 }
 
 /* The Close Button */
